[package]
name = "ws2812b-driver"
version = "0.2.0"
edition = "2021"
resolver = "2"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "A serial driver for WS2812B LED strips"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/Ws2812bDriver-rust-rp2040"
readme = "README.md"


[[bin]]
name = "firmware"
path = "src/main.rs"


[features]
default = ["bootsel", "raspberrypi-pico"]
bootsel = []
raspberrypi-pico = ["dep:rp-pico"]
seeduino-xiao = ["dep:seeeduino-xiao-rp2040"]


[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
pio = "0.2.1"
pio-proc = "0.2.2"
fugit = "0.3.6"
critical-section =  "1.1.1"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
# rp2040-flash = "0.3.1" # FIXME: currently incompatible with the current HAL version
embedded-runtime-rp2040 = "0.2.0"

rp-pico = { version = "0.8.0", optional = true }
seeeduino-xiao-rp2040 = { version = "0.5.0", optional = true }


[profile.dev]
overflow-checks = true
opt-level = 0
debug = 2

[profile.release]
debug = 0
overflow-checks = true
strip = "symbols"
