[package]
name = "ws2812b-driver"
version = "0.2.1"
edition = "2021"
resolver = "2"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "A serial driver for WS2812B LED strips"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/Ws2812bDriver-rust-rp2040"
readme = "README.md"


[[bin]]
name = "firmware"
path = "src/main.rs"


[features]
default = ["bootsel", "raspberrypi-pico"]
bootsel = []
raspberrypi-pico = ["dep:rp-pico"]
seeduino-xiao = ["dep:seeeduino-xiao-rp2040"]


[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.3"
critical-section =  "1.1.1"
embedded-hal = "1.0.0"
embedded-runtime-rp2040 = "0.4.0"
fugit = "0.3.6"
static_cell = "2.1.1"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
# Depends on rp-pico
pio = "0.2.1"
pio-proc = "0.2.1"

[dependencies.portable-atomic]
version = "1.13.0"
features = ["critical-section"]

[dependencies.rp-pico]
version = "0.9.0"
optional = true

[dependencies.seeeduino-xiao-rp2040]
version = "0.6.0"
optional = true


[profile.dev]
overflow-checks = true
opt-level = 0
debug = 2

[profile.release]
debug = 0
overflow-checks = true
strip = "symbols"
